apps/monitoring/deployment-prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: prometheus-server

  template:
    metadata:
      labels:
        app: prometheus-server

    spec:
      serviceAccountName: prometheus

      containers:
        - name: prometheus
          image: prom/prometheus@sha256:5ce7540c3c00ef4ab0c9d2c995c6a5b9c421f44b4a115d97a2c7af3b1c21cbb0

          ports:
            - containerPort: 9090

          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus

            - name: prometheus-storage
              mountPath: /prometheus

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--storage.tsdb.retention.time=14d"

          startupProbe:
            httpGet:
              path: /-/ready
              port: 9090
            periodSeconds: 2
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "192Mi"
            limits:
              memory: "512Mi"

      volumes:
        - name: config-volume
          configMap:
            name: prometheus-server-conf
            defaultMode: 420

        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus-server
spec:
  selector:
    app: prometheus-server

  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
